fix main-menu overflow for custom browser font
set font-size with px instead of large

--- a/sites/all/themes/teiazen/sass/navigation.scss
+++ b/sites/all/themes/teiazen/sass/navigation.scss
@@ -80,7 +80,7 @@ $framing-radius: 1.3em;
 
   ul.menu {
     a {
-      font-size: large;
+      font-size: 18px;
       vertical-align: middle;
     }
     a, a:hover, a:active, a:visited {
